Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerObjectField.quorum
class Main
    Object v
    integer t = 5
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
